# whatsapp-customer-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.scanner  MIGRATION_PLAN.md  SETUP_META.md  db.py  pyproject.toml  railway.toml  requirements.txt  responder.py  scanner.py  scanner.railway.toml  whatsapp_api.py
Brandon/: 035E68F5-9DA8-4CF2-8670-D567C1EE6F30.heic  1F6AAEEB-EC6A-4CE2-AD1B-9D13A0F8D472.heic  42986C80-FD66-45B9-8320-73AC62AD1DEE.heic  59ECE5E5-08BE-4D74-9E28-7D12CBBD7DD5.heic  5A769D70-3B69-4AEE-BC96-7F035CE27C9D.heic  7362D8B7-DFBF-4964-9F5B-61F26A1D02D1.heic  763C5888-E014-4F19-AA65-180BC204EB01.heic  8C5E2F18-B9E2-4BCD-B7BA-2BF9BFE14090.heic  958775AC-66C8-4982-BA57-AF609BB585C9.heic  A9A50E07-5FE9-4297-925C-DCC9D9F9810D.heic  B59E2188-E317-4F06-86C9-451A662C4867.heic  Emilian's Meeting Notes_otter_ai.txt  FOR_JACQUES.md
knowledge_base/: clinic_info.md
web/: app.py
web/templates/: base.html  inbox.html  knowledge.html
